@@ -1,35 +1,35 @@
 Changes
-MANIFEST
-Makefile.PL
-README
-TODO
+examples/0.91/create_rss_0.91_full.pl
+examples/0.91/create_rss_0.91.pl
+examples/0.91/fm0.91_full.rdf
+examples/0.91/fm0.91.rdf
+examples/0.91/fm.rdf
+examples/0.91/rss-0.91.dtd
+examples/0.91/xmlnews.rdf
 examples/0.9/create_rss.pl
 examples/0.9/linuxtoday.rdf
 examples/0.9/rss-0.9.dtd
 examples/0.9/slashdot.rdf
-examples/0.91/create_rss_0.91.pl
-examples/0.91/create_rss_0.91_full.pl
-examples/0.91/fm.rdf
-examples/0.91/fm0.91.rdf
-examples/0.91/fm0.91_full.rdf
-examples/0.91/rss-0.91.dtd
-examples/0.91/xmlnews.rdf
 examples/1.0/create_rss_1.0.pl
 examples/1.0/rss1.0.exotic.rdf
 examples/1.0/rss1.0.rdf
 examples/1.0/slash.rdf
 examples/1.0/update_rss_1.0.pl
-examples/README
 examples/convert.pl
 examples/create_rss_multiple.pl
 examples/freshmeat.rdf
+examples/README
 examples/rss2html.pl
 examples/rss_info.pl
 examples/update_rss.pl
 lib/XML/RSS.pm
+Makefile.PL
+MANIFEST
+META.yml                                 Module meta-data (added by MakeMaker)
+README
+t/0.91-parse.t
 t/0.9-generate.t
 t/0.9-parse.t
-t/0.91-parse.t
 t/1.0-generate.t
 t/1.0-parse-exotic.t
 t/1.0-parse.t
@@ -40,5 +40,7 @@ t/encode-output.t
 t/encoding.t
 t/load.t
 t/pod.t
+t/rss2-gt-encoding.t
 t/test_manifest
 t/version.t
+TODO
